# OpenCL-CLHPP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  OpenCL-CLHPP.pc.in  README.md  README.txt  annotated.html  annotated_dup.js  build.sh  cl2_8hpp.html  cl2_8hpp.js  cl2_8hpp_source.html  classcl_1_1_buffer-members.html  classcl_1_1_buffer.html  classcl_1_1_buffer.js  classcl_1_1_buffer_g_l-members.html  classcl_1_1_buffer_g_l.html  classcl_1_1_buffer_g_l.js  classcl_1_1_buffer_render_g_l-members.html  classcl_1_1_buffer_render_g_l.html  classcl_1_1_buffer_render_g_l.js  classcl_1_1_command_queue-members.html  classcl_1_1_command_queue.html  classcl_1_1_command_queue.js  classcl_1_1_context-members.html  classcl_1_1_context.html  classcl_1_1_context.js  classcl_1_1_device-members.html  classcl_1_1_device.html  classcl_1_1_device.js  classcl_1_1_device_command_queue-members.html  classcl_1_1_device_command_queue.html  classcl_1_1_device_command_queue.js  classcl_1_1_enqueue_args-members.html  classcl_1_1_enqueue_args.html  classcl_1_1_enqueue_args.js  classcl_1_1_event-members.html  classcl_1_1_event.html  (+205 more)
.github/workflows/: linux.yml  macos.yml  presubmit.yml  release.yml  windows.yml
.gitlab/: stream-ci.yaml
cmake/: DebSourcePkg.cmake  Package.cmake  PackageSetup.cmake
docs/: CMakeLists.txt  Doxyfile.in  cpp_api.doc  cpp_api2.doc  cpp_api_v1.2.5.doc  cpp_api_v1.2.6.doc
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  headerexample.cpp  headerexampleCL2.cpp  trivial.cpp  trivialCL2.cpp  trivialCL2SizeTCompat.cpp  trivialSizeTCompat.cpp
include/: CMakeLists.txt
include/CL/: cl.hpp  cl2.hpp  opencl.hpp
release/: cl2.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+18 more)
tests/: CMakeLists.txt  ToAdd.txt  check-cl-hpp-generation.sh  cmock.yml  cmock_apple.yml  strip_defines.cmake  strip_defines.py  test_cl2hpp.cpp  test_clhpp.cpp  test_clhpp_cxx11.cpp  test_openclhpp.cpp  test_versions.cpp
tests/pkgconfig/: pkgconfig.cpp
tests/pkgconfig/bare/: CMakeLists.txt
tests/pkgconfig/sdk/: CMakeLists.txt
